--- a/EmpInfo/Views/Apply/BeginAuditETApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditETApply.cshtml
@@ -1,7 +1,7 @@
 ﻿@using EmpInfo.Models;
 @{
     BeginAuditModel bam = (BeginAuditModel)ViewData["bam"];
-    var deliveryCompanyList = new List<string>() { "百世", "跨越", "恒骏", "顺丰", "邮政", "双亨", "冠粤", "荣鑫", "顺展", "捷易" };
+    var deliveryCompanyList = new List<string>() { "百世", "跨越", "顺丰", "宅急送", "双亨", "冠粤", "荣鑫", "顺展", "客户自提" };
 }
 @section CSS{
     <style type="text/css">
