--- a/EmpInfo/Views/Apply/CheckEPApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckEPApply.cshtml
@@ -52,7 +52,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>报修人</th>
+                        <th>跟进责任人</th>
                         <td>
                             @ep.applier_name
                         </td>
