--- a/EmpInfo/Views/Apply/CheckFXApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckFXApply.cshtml
@@ -12,6 +12,7 @@
 @section CSS{
     <link rel="stylesheet" href="@Url.Content("~/Content/webupload/webuploader.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-table/bootstrap-table.min.css")" />
+    @*<link rel="stylesheet" href="@Url.Content("~/Content/prettyPhoto.css")" />*@
 
     <style type="text/css">
         .b-label {
@@ -35,7 +36,8 @@
 @section Scripts {
     <script src="@Url.Content("~/Content/bootstrap-table/bootstrap-table.js")"></script>
     <script src="@Url.Content("~/Content/bootstrap-table/locale/bootstrap-table-zh-CN.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/myDownloaderPro.js")"></script>
+    @*<script src="@Url.Content("~/Scripts/jquery.prettyPhoto_full.js")"></script>*@
+    <script src="@Url.Content("~/Scripts/myDownloaderPro.js?v=2")"></script>
 
     <script>
     var minutes=30; //自提二维码有效分钟数
