--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -266,10 +266,31 @@
                 </a>
             </div>
 
-            <div class="col-xs-4 col-sm-3 col-md-2">
+            @*<div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Others/ManagementReport")">
                     <img src="@Url.Content("~/Content/images/managemen_report.png")" class="center-block" />
                     <p class="text-center">经营报表统计</p>
+                </a>
+            </div>*@
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Others/MarketingReport")">
+                    <img src="@Url.Content("~/Content/images/managemen_report.png")" class="center-block" />
+                    <p class="text-center">销售接单统计</p>
+                </a>
+            </div>
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Others/PurchasingReport")">
+                    <img src="@Url.Content("~/Content/images/purchasing.png")" class="center-block" />
+                    <p class="text-center">采购PO统计</p>
+                </a>
+            </div>
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Others/AccountingReport")">
+                    <img src="@Url.Content("~/Content/images/pay.png")" class="center-block" />
+                    <p class="text-center">会计付款统计</p>
                 </a>
             </div>
 
