--- a/EmpInfo/Views/Apply/BeginApplyPP.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyPP.cshtml
@@ -46,6 +46,7 @@
     <script src="@Url.Content("~/Content/bootstrap-table/locale/bootstrap-table-zh-CN.min.js")"></script>
     <script src="@Url.Content("~/Scripts/webuploader.min.js")"></script>
     <script src="@Url.Content("~/Scripts/myUploaderPro.js?v=2")"></script>
+    <script src="@Url.Content("~/Scripts/myInputDialog.js")"></script>
 
     <script>
         $("#tb").bootstrapTable({
@@ -149,18 +150,24 @@
                 }
                 var row = rows[0];
 
-                openInputDialog("请输入需要修改的数量",
-                    function (content) {
-                        if (!utils.testIsInt(content)) {
+                $.inputDialog({
+                    title: "修改数量",
+                    controls: [{ text: "数量", name: "qty", defaultValue: row.qty, placeholder: "请录入使用的数量" }],
+                    callback: function (result) {
+                        var qty = result.qty;
+                        if (!utils.testIsInt(qty)) {
                             toastr.error("数量请输入整数");
-                            return;
+                            return false;
                         }
-                        if (parseInt(content) > row.inventory) {
-                            toastr.error("数量不能大于库存数："+row.inventory);
-                            return;
+                        if (parseInt(qty) > row.inventory) {
+                            toastr.error("数量不能大于库存数：" + row.inventory);
+                            return false;
                         }
-                        updateItemQty(row.item_id, content);
-                    }, "修改数量", "取消", "确认", row.qty);
+                        updateItemQty(row.item_id, qty);
+                        return true;
+                    }
+                });
+
 
             });
 
@@ -335,7 +342,6 @@
 @section Modal {
     @Html.Partial("_ConfirmDialog")
     @Html.Partial("_MessageDialog")
-    @Html.Partial("_InputDialog")
     <div class="modal fade" id="itemModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="groupLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
