--- a/EmpInfo/Views/ApplyExtra/UpdateMTEqInfo.cshtml
+++ b/EmpInfo/Views/ApplyExtra/UpdateMTEqInfo.cshtml
@@ -308,6 +308,16 @@
                          </div>
                      </div>
                  </div>
+                 <div class="col-xs-12 col-sm-6 col-md-4">
+                     <div class="b-div">
+                         <div class="b-label">
+                             备注:
+                         </div>
+                         <div class="b-input">
+                             <input type="text" class="form-control" name="comment" placeholder="备注" />
+                         </div>
+                     </div>
+                 </div>
                  @if (m.info != null) {
                     <div class="col-xs-12 col-sm-6 col-md-4">
                         <div class="b-div">
